# zaiko

./: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
patches/: oauth4webapi@2.8.1.patch
src/: auth.ts  models.ts  useMsGraphClient.ts
src/app/: layout.tsx  page.tsx
src/app/components/: InnerTable.tsx  LinkText.tsx  Table.tsx  TextBox.tsx  inner-table.tsx  table.tsx
src/repositories/: automerge.ts  msgraph.ts
src/types/: next-auth.d.ts
zaiko-backend/: .gitignore  Cargo.toml
zaiko-backend/src/: main.rs
